<resources>
    <string name="app_name">Computers</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="password_length_error">Password must be at least 6 characters</string>
    <string name="welcome">Create new acc / Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="blocked_msg">You are blocked!</string>
    <string name="log_out">Log out</string>
    <string name="computers">Computers</string>
    <string name="language">Language</string>
    <string name="system">System</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="font">Font</string>
    <string name="admin_panel">Admin</string>
    <string name="select_photo">Select image</string>
    <string name="delete_photo">Delete image</string>
    <string name="select_video">Select video</string>
    <string name="delete_video">Delete video</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="processor_model">Processor model</string>
    <string name="ram_size">Ram size</string>
    <string name="ssd_size">SSD size</string>
    <string name="price">Price</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="pick_location">Pick location</string>
    <string name="delete_location">Delete location</string>
    <string name="note">Note</string>
    <string name="must_be_not_empty">Must be not empty</string>
    <string name="new_computer">New computer</string>
    <string name="details">Computer details</string>
    <string name="video">Video</string>
    <string name="mappoint">Map point</string>
    <string name="user_details">User details</string>
    <string name="blocked">Blocked</string>
    <string name="active">Active</string>
    <string name="success">Success</string>
    <string name="success_change">User\'s params have been sucessfully changed</string>
    <string name="error">Error</string>
    <string name="status">User status</string>
    <string name="set_active">Set active</string>
    <string name="set_blocked">Set blocked</string>
</resources>