<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/songsFragment">

    <fragment
        android:id="@+id/songsFragment"
        android:name="com.shulga.androidapp.ui.main.computers.ComputersFragment"
        android:label="@string/computers"
        tools:layout="@layout/fragment_computers" >
        <action
            android:id="@+id/action_songsFragment_to_formActivity"
            app:destination="@id/formActivity" />
        <action
            android:id="@+id/action_songsFragment_to_songsDetailsActivity"
            app:destination="@id/songsDetailsActivity" />
    </fragment>
    <fragment
        android:id="@+id/googleMapsFragment"
        android:name="com.shulga.androidapp.ui.main.googleMaps.GoogleMapsFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_google_maps" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.shulga.androidapp.ui.main.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/adminPanelFragment"
        android:name="com.shulga.androidapp.ui.main.admin.users.UsersFragment"
        android:label="@string/admin_panel"
        tools:layout="@layout/fragment_users" >
        <action
            android:id="@+id/action_usersFragment_to_usersDetailsActivity"
            app:destination="@id/usersDetailsActivity" />
    </fragment>
    <activity
        android:id="@+id/formActivity"
        android:name="com.shulga.androidapp.ui.main.computers.form.FormActivity"
        android:label="activity_form"
        tools:layout="@layout/activity_form" />
    <activity
        android:id="@+id/songsDetailsActivity"
        android:name="com.morozov.songs.ui.main.songs.details.SongsDetailsActivity"
        android:label="activity_songs_details"
        tools:layout="@layout/activity_songs_details" />
    <activity
        android:id="@+id/usersDetailsActivity"
        android:name="com.morozov.songs.ui.main.admin.users.details.UsersDetailsActivity"
        android:label="activity_users_details"
        tools:layout="@layout/activity_users_details" />
</navigation>